--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "prisma:studio": "prisma studio",
     "prisma:migrate": "prisma migrate dev --name init",
     "prisma:push": "prisma db push",
-    "prisma:seed": "ts-node prisma/seed.ts"
+    "prisma:seed": "node --loader ts-node/esm prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.17.0",
+    "@prisma/client": "^6.18.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.15",
@@ -23,7 +23,10 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@siberiacancode/reactuse": "^0.3.2",
     "@types/bcrypt": "^6.0.0",
+    "@types/qs": "^6.14.0",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -31,6 +34,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
+    "qs": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
@@ -45,7 +49,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9.13.0",
     "eslint-config-next": "^15.5.2",
-    "prisma": "^6.17.0",
+    "prisma": "^6.18.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.7",
